<resources>
    <!--English -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_name" translatable="false">QuizApp</string>
    <string name="tabMath"><u>Math</u></string>
    <string name="tabScience"><u>Science</u></string>
    <string name="tabGeneral"><u>General</u></string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal">Personal</string>
    <string name="rank">Rank</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type new Password</string>
    <string name="set_new_password">Set new Password</string>
    <string name="new_name">New Name</string>
    <string name="set_new_profile">Set new Profile</string>
    <string name="type_of_game">Type of game</string>
    <string name="next">Next</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="full_name">Full Name</string>
    <string name="skip_for_now">Skip for now?</string>
    <string name="set_profile">Set Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here">Register Here</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_here">Click here</string>
    <string name="already_have_account">Already have account?</string>
    <string name="do_you_want_to_edit_your_profile">Do you want to edit your profile</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_delete_your_account">Do you want to Delete your account?</string>
    <string name="text_incorrect">Incorrect Answer:</string>
    <string name="text_correct">Correct Answer :</string>
    <string name="ok">OK</string>
    <string name="do_you_want_to_quite_the_game">Do you want to quite the game?</string>
    <string name="restart_game">Restart Game</string>
    <string name="result">Result!!</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="restart">Restart</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="all_categories">All Categories!!</string>
    <string name="math">Math</string>
    <string name="science">Science</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="best_score">Best Score</string>
    <string name="checking_your_credential">Checking your credential</string>
    <string name="number">No</string>
    <string name="name">Name</string>
    <string name="success">Success</string>
    <string name="do_you_want_to_change_password">Do you want to change Password?</string>
    <string name="profile">Profile</string>
    <string name="english">English</string>
    <string name="khmer">Khmer</string>
    <string name="save">Save</string>
    <string name="no_record">No Record</string>
    <string name="congratulation">Congratulation!!</string>
    <string name="you">You</string>
    <string name="sec">Sec</string>
    <string name="message">Hi! Please help install this app.</string>
    <string name="question">Question</string>
    <string name="start_point">Point : 0/100</string>
    <string name="tip_general">General Questions</string>
    <string name="tip_science">Science Questions</string>
    <string name="tip_math">Math Questions</string>
    <string name="for_everyone">For Everyone!!</string>
    <string name="createAccount">Create Account Succeeded</string>
    <string name="loginSucceeded">Login Succeeded</string>
    <string name="edit_profile_succeeded">Edit Profile Succeeded</string>
    <string name="change_password_succeeded">Change Password Succeeded</string>
    <string name="create_account">Create Account</string>
    <string name="delete_account_succeeded">Delete Account Succeeded</string>


</resources>