<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="28dp"
        android:id="@+id/TextHeader"
        android:text="@string/result"
        android:textColor="@color/white"
        android:background="@color/blue"/>

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:id="@+id/IconDialog"
        android:src="@drawable/medal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textStyle="bold"
        android:textSize="24dp"
        android:id="@+id/TextScore"
        android:textAlignment="center"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextTime"
        android:text="@string/time"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/blue"/>


    <androidx.cardview.widget.CardView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:id="@+id/BtnRestart"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:drawableRight="@drawable/restart"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:id="@+id/BtnShare"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:drawableRight="@drawable/share_32"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textStyle="bold"
            android:id="@+id/BtnHome"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:drawableRight="@drawable/home_white_32"/>
    </androidx.cardview.widget.CardView>




</LinearLayout>