<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".fragment.ProfileTabFragment">


    <!-- Profile  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <!--        Profile image-->
        <androidx.cardview.widget.CardView
            android:layout_width="128dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="128dp">
            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/ProfileImage"
                android:layout_height="match_parent"
                android:src="@drawable/avatar"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:text="@string/user_name"
            android:id="@+id/TextDisplayName"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/email"
            android:id="@+id/TextEmail"
            android:layout_marginTop="6dp"
            android:textColor="#707280"
            android:textSize="22dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/BtnEdit"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:text="@string/edit_profile"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/arrow_right_white"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Option-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="12"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--  Form-->
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/Form"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="#e6f6f6f6"
                    android:text="@string/personal"
                    android:textSize="24dp"
                    android:textColor="#bcbcbc"
                    android:gravity="center_vertical"/>
                <Button
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/rank"
                    android:padding="6dp"
                    android:textSize="18dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/BtnRank"
                    android:drawableLeft="@drawable/rank_32"
                    android:drawableRight="@drawable/arrow_right_black"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/change_password"
                    android:padding="6dp"
                    android:textSize="18dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/BtnChangePassword"
                    android:drawableLeft="@drawable/key_32"
                    android:drawableRight="@drawable/arrow_right_black"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/delete_account"
                    android:padding="6dp"
                    android:textSize="18dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/BtnDeleteAccount"
                    android:drawableLeft="@drawable/account_32"
                    android:drawableRight="@drawable/arrow_right_black"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="#e6f6f6f6"
                    android:text="@string/setting"
                    android:textSize="24dp"
                    android:textColor="#bcbcbc"
                    android:gravity="center_vertical"/>

                <Button
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/language"
                    android:padding="6dp"
                    android:textSize="18dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/BtnLanguage"
                    android:drawableLeft="@drawable/language_32"
                    android:drawableRight="@drawable/arrow_right_black"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/logout"
                    android:padding="6dp"
                    android:textSize="18dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/BtnLogout"
                    android:drawableLeft="@drawable/logout_32"
                    android:drawableRight="@drawable/arrow_right_black"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:id="@+id/SHOW_PROGRESS"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:layout_width="128dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="128dp"/>
                <TextView
                    android:id="@+id/TextLoading"
                    android:text="Logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#24296a"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>




</LinearLayout>