<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.RankFragment">

    <!--   Top bar     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:layout_height="80dp">

        <!--      Image Profile      -->
        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            app:cardCornerRadius="40dp"
            android:layout_height="80dp">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/rank512"
                android:id="@+id/TypeRank"
                android:scaleType="fitCenter"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/rank"
            android:fontFamily="@font/odormeanchey"
            android:id="@+id/TextRank"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/menu"
        android:layout_height="wrap_content"
        android:elevation="24dp"
        app:itemTextAppearanceActive="@style/TextAppearance.AppCompat.Menu"
        app:menu="@menu/menu_rank"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number"
            android:textColor="@color/blue"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:text="@string/name"
            android:fontFamily="@font/odormeanchey"
            android:textColor="@color/blue"
            android:textSize="16dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textColor="@color/blue"
            android:textSize="16dp"
            android:fontFamily="@font/odormeanchey"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:fontFamily="@font/odormeanchey"
            android:text="@string/time"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ListMath" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ListScience"
        android:visibility="gone"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ListGeneral"
        android:visibility="gone"
        />


</LinearLayout>