<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:background="@color/blue"
     android:textStyle="bold"
     android:textSize="24dp"
     android:textAlignment="center"
     android:gravity="center_vertical"
     android:textColor="@color/white"
     android:text="@string/do_you_want_to_quite_the_game"
     android:fontFamily="@font/odormeanchey"
     tools:ignore="RtlCompat" />

 <ImageView
     android:layout_width="128dp"
     android:layout_height="128dp"
     android:layout_gravity="center"
     app:srcCompat="@drawable/pause" />
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     app:cardElevation="12dp"
     android:layout_margin="10dp"
     app:cardCornerRadius="12dp"
     app:cardBackgroundColor="@color/primary"
     android:layout_height="wrap_content">
  <Button
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/restart"
      android:fontFamily="@font/odormeanchey"
      android:drawableLeft="@drawable/restart"
      android:textSize="18dp"
      android:id="@+id/BtnRestart"
      android:textStyle="bold"
      android:textAllCaps="false"
      style="@style/Widget.AppCompat.Button.Borderless"/>
 </androidx.cardview.widget.CardView>

 <LinearLayout
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:weightSum="2"
     android:layout_height="wrap_content">
  <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:cardElevation="12dp"
      android:layout_margin="10dp"
      app:cardCornerRadius="12dp"
      android:layout_marginRight="12dp"
      android:layout_weight="1">
   <Button
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:text="@string/no"
       android:id="@+id/BtnNo"
       android:fontFamily="@font/odormeanchey"
       android:textSize="18dp"
       android:drawableLeft="@drawable/close_red"
       android:textColor="@color/primary"
       style="@style/Widget.AppCompat.Button.Borderless"/>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:cardElevation="12dp"
      android:layout_margin="10dp"
      app:cardCornerRadius="12dp"
      app:cardBackgroundColor="@color/primary"
      android:layout_weight="1">
   <Button
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:text="@string/yes"
       android:textSize="18dp"
       android:fontFamily="@font/odormeanchey"
       android:id="@+id/BtnYes"
       android:drawableRight="@drawable/arrow_right_white"
       android:textColor="@color/white"
       style="@style/Widget.AppCompat.Button.Borderless"/>
  </androidx.cardview.widget.CardView>
 </LinearLayout>
</LinearLayout>