<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24dp"
        android:id="@+id/TextHeader"
        android:fontFamily="@font/odormeanchey"
        android:text="@string/do_you_want_to_change_password"
        android:textColor="@color/white"
        android:background="@color/blue"/>

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:id="@+id/IconDialog"
        android:src="@drawable/ask"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="12dp"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="16dp"
            android:elevation="24dp"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:fontFamily="@font/odormeanchey"
                android:textSize="16dp"
                android:drawableLeft="@drawable/close_red"
                android:textStyle="bold"
                android:id="@+id/BtnNo"
                android:textColor="@color/primary"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="16dp"
            android:elevation="24dp"
            android:layout_weight="1"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/primary"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="16dp"
                android:textStyle="bold"
                android:drawableRight="@drawable/arrow_right_white"
                android:id="@+id/BtnYes"
                android:fontFamily="@font/odormeanchey"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>